# LegionCore-7.3.5

./: .gitignore  CMakeLists.txt  README.md  revision_data.h.in.cmake
dep/cds/: CMakeLists.txt
dep/cds/cds/: init.h
dep/cds/cds/details/: lib.h
dep/cds/cds/gc/: dhp.h  hp.h
dep/cds/src/: dhp.cpp  hp.cpp  init.cpp  thread_data.cpp  urcu_gp.cpp  urcu_sh.cpp
dep/mysql/: CMakeLists.txt
src/server/game/: CMakeLists.txt
src/server/game/AI/: CreatureAI.cpp  CreatureAI.h  CreatureAIFactory.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  EventMap.cpp  EventMap.h
src/server/game/Accounts/: AccountMgr.cpp  AccountMgr.h  BattlenetAccountMgr.cpp  BattlenetAccountMgr.h
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/server/game/Addons/: AddonMgr.cpp  AddonMgr.h
src/server/game/Anticheat/: Anticheat.cpp  Anticheat.h
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/server/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h  AuctionHouseBotBuyer.cpp  AuctionHouseBotBuyer.h  AuctionHouseBotSeller.cpp  AuctionHouseBotSeller.h
src/server/game/BattlePay/: BattlePayMgr.cpp  BattlePayMgr.h  CharacterService.cpp  CharacterService.h
src/server/game/Battlefield/: Battlefield.cpp  Battlefield.h  BattlefieldMgr.cpp  BattlefieldMgr.h
src/server/game/Battlegrounds/: Arena.cpp  Arena.h  ArenaScore.cpp  ArenaScore.h  Battleground.cpp  Battleground.h  BattlegroundDefines.h  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundQueue.cpp  BattlegroundQueue.h  BattlegroundScore.cpp  BattlegroundScore.h  Bracket.cpp  Bracket.h  BracketMgr.cpp  BracketMgr.h  SpectatorAddon.cpp  SpectatorAddon.h
src/server/game/BlackMarket/: BlackMarketMgr.cpp  BlackMarketMgr.h
src/server/game/BrawlersGuild/: BrawlersGuild.cpp  BrawlersGuild.h
src/server/game/Calendar/: CalendarMgr.cpp  CalendarMgr.h
src/server/game/Challenge/: Challenge.cpp  Challenge.h  ChallengeMgr.cpp  ChallengeMgr.h
src/server/game/Chat/: Chat.cpp  Chat.h  ChatLink.cpp  ChatLink.h
src/server/game/Combat/: HostileRefManager.cpp  HostileRefManager.h  ThreatManager.cpp  ThreatManager.h  UnitEvents.cpp  UnitEvents.h
src/server/game/Conditions/: ConditionMgr.cpp  ConditionMgr.h  DisableMgr.cpp  DisableMgr.h
src/server/game/Contribution/: ContributionMgr.cpp  ContributionMgr.h
src/server/game/DataStores/: DB2HotfixGenerator.cpp  DB2HotfixGenerator.h  DB2LoadInfo.h  DB2Metadata.h  DB2Stores.cpp  DB2Stores.h  DB2Structure.cpp  DB2Structure.h  DBCEnums.h  GameTables.cpp  GameTables.h
src/server/game/DungeonFinding/: LFG.cpp  LFG.h  LFGGroupData.cpp  LFGGroupData.h  LFGMgr.cpp  LFGMgr.h  LFGPlayerData.cpp  LFGPlayerData.h  LFGQueue.cpp  LFGQueue.h  LFGScripts.cpp  LFGScripts.h
src/server/game/Events/: GameEventMgr.cpp  GameEventMgr.h
src/server/game/Garrison/: Garrison.cpp  Garrison.h  GarrisonFollower.cpp  GarrisonFollower.h  GarrisonGlobal.h  GarrisonMap.cpp  GarrisonMap.h  GarrisonMgr.cpp  GarrisonMgr.h  GarrisonMission.cpp  GarrisonMission.h  GarrisonPlot.cpp  GarrisonPlot.h
src/server/game/Globals/: AreaTriggerData.cpp  AreaTriggerData.h  BattlePayData.cpp  BattlePayData.h  BattlePetData.cpp  BattlePetData.h  CharacterData.cpp  CharacterData.h  ConversationData.cpp  ConversationData.h  EventObjectData.cpp  EventObjectData.h  GlobalFunctional.cpp  GlobalFunctional.h  GossipData.cpp  GossipData.h  LogsSystem.cpp  LogsSystem.h  ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h  QuestData.cpp  QuestData.h  ScriptsData.cpp  ScriptsData.h
src/server/game/Grids/: Grid.h  GridDefines.h  GridInfo.cpp  GridInfo.h  NGrid.cpp  NGrid.h  ObjectGridLoader.cpp  ObjectGridLoader.h
src/server/game/GroupFinder/: LFGList.cpp  LFGList.h  LFGListMgr.cpp  LFGListMgr.h
src/server/game/Groups/: Group.cpp  Group.h  GroupMgr.cpp  GroupMgr.h
src/server/game/Guilds/: Guild.cpp  Guild.h  GuildFinderMgr.cpp  GuildFinderMgr.h  GuildMgr.cpp  GuildMgr.h
src/server/game/Handlers/: ArtifactHandler.cpp  AuctionHouseHandler.cpp  AuthHandler.cpp  BattleGroundHandler.cpp  BattlePayHandler.cpp  BattlePetHandler.cpp  BattlefieldHandler.cpp  BattlenetHandler.cpp  BlackMarketHandler.cpp  CalendarHandler.cpp  ChallengeHandler.cpp  ChannelHandler.cpp  CharacterHandler.cpp  ChatHandler.cpp  ClientConfigHandler.cpp  CollectionsHandler.cpp  CombatHandler.cpp  CommentatorHandler.cpp  DuelHandler.cpp  EquipmentHandler.cpp  GarrisonHandler.cpp  GroupHandler.cpp  GuildFinderHandler.cpp  GuildHandler.cpp  HotfixHandler.cpp  InspectHandler.cpp  ItemHandler.cpp  LFGHandler.cpp  LfgListHandler.cpp  LoginQueryHolder.cpp  LoginQueryHolder.h  LootHandler.cpp  MailHandler.cpp  MiscHandler.cpp  MovementHandler.cpp  NPCHandler.cpp  NPCHandler.h  PetHandler.cpp  PetitionsHandler.cpp  QueryHandler.cpp  (+15 more)
src/server/game/Instances/: InstanceSaveMgr.cpp  InstanceSaveMgr.h  InstanceScript.cpp  InstanceScript.h
src/server/game/Loot/: LootMgr.cpp  LootMgr.h
src/server/game/Mails/: Mail.cpp  Mail.h
src/server/game/Maps/: BattlegroundMap.cpp  BattlegroundMap.h  Map.cpp  Map.h  MapInstanced.cpp  MapInstanced.h  MapManager.cpp  MapManager.h  MapObject.cpp  MapObject.h  MapReference.h  PhaseMgr.cpp  PhaseMgr.h  ThreadPoolMap.cpp  ThreadPoolMap.hpp  TransportMgr.cpp  TransportMgr.h  ZoneScript.cpp  ZoneScript.h
src/server/game/Miscellaneous/: CdsLib.h  Formulas.h  Language.h  SharedDefines.h  WorldStates.h
src/server/game/Movement/: FollowerReference.h  MotionMaster.cpp  MotionMaster.h  MovementGenerator.h  MovementGeneratorImpl.h  PathGenerator.cpp  PathGenerator.h
src/server/game/OutdoorPvP/: OutdoorPvP.cpp  OutdoorPvP.h  (+2 more)
src/server/proto/: CMakeLists.txt  ServiceBase.h
src/server/scripts/: CMakeLists.txt  ScriptLoader.cpp  ScriptLoader.h
src/server/shared/: CMakeLists.txt  Containers.h
src/tools/mmaps_generator/: CMakeLists.txt  IntermediateValues.cpp  MapBuilder.cpp  PathGenerator.cpp  VMapExtensions.cpp
src/tools/web_api/: CMakeLists.txt  confirmation.mail.dist  registration.mail.dist  reset.mail.dist  validation.mail.dist  webapi.conf.dist
(+1988 files in other folders)
